# FinSight

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RECURRING.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: task.md
app/: database.py  dependencies.py  main.py  requirements.txt
app/core/: config.py  oauth.py  security.py
app/models/: __init__.py  balance_anchor.py  category.py  oauth_account.py  paycheck.py  paycheck_schedule.py  recurring_payment.py  refresh_token.py  transaction.py  user.py
app/routes/: __init__.py  auth.py  paycheck.py  recurring_payment.py  transaction.py  users.py
app/schemas/: __init__.py  paycheck.py  recurring_payment.py  transaction.py  user.py
app/services/: auth_service.py  paycheck_service.py  recurring_payment_service.py  transaction_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js  demoStore.js  (+4 more)
migrations/: env.py
migrations/versions/: 194f4e65b6f9_feat_models_add_last_applied_month_to_.py  38631d3d8b05_create_transactions_table.py  45699d99feb9_feat_models_add_spending_reserve_to_.py  4d8ef9c5964d_use_timestamptz_for_created_at_and_.py  58be7e487280_feat_models_add_balance_anchors_table.py  9484ddf91be9_increase_password_hash_length.py  9c569d6f494a_create_users_table.py  a1b2c3d4e5f6_add_refresh_tokens_table.py  adbc1bb1e48f_add_avatar_to_users.py  b7f3c9a1d2e4_add_oauth_accounts_table.py  (+5 more)
tests/: conftest.py  test_auth.py  test_recurring_payments.py  test_transactions.py  test_users.py
(+32 files in other folders)
